Fixed bug where if you reset the map would still be set to a location and show markers (if those were present before resetting.) I added the initMap function to the reset form function to make sure the map is reset with the form is reset. Added responsive styling to the place form. CSS: Styled the info-windows for desktop and mobile. Fixed display bugs on mobile and tested the responsive layout using Mozilla developer tools and real devices. The info-boxes are not breaking down correctly for mobile and each part can be seen or, when content overflows, a scrollbar appears to enable to user to scroll to the rest of the content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 
 body {
   font-family: "Rubik", sans-serif;
-  background-color: #fef5eb;
+  background-color: rgb(252, 250, 250);
 }
 
 #map {
@@ -31,9 +31,10 @@ body {
 /*---------------------------------------------Headings & subtitles*/
 
 h1 {
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  color: #2b2a2a;
+  font-family: "Oleo Script", cursive;
+  font-weight: 400;
+  color: #f295bf;
+  font-size: 2.5em;
 }
 
 h2 {
@@ -52,7 +53,7 @@ h3 {
 h4 {
   font-family: "Rubik", sans-serif;
   font-weight: 300;
-  font-size: 1.1rem;
+  font-size: 0.9em;
   color: #fff;
 }
 
@@ -82,6 +83,9 @@ h4 {
 @media screen and (max-width: 801px) {
   .search-bar {
     margin-bottom: 0px;
+  }
+  #activity {
+    width: 100%;
   }
 }
 
@@ -122,9 +126,16 @@ h4 {
 }
 
 #map-row {
-  padding: 25px 30px 25px 30px;
+  padding: 25px 30px 25px 45px;
   background-color: #4cbdc5;
 }
+
+@media screen and (max-width: 767.98px) {
+ #map-row {
+  padding: 0px;
+}
+}
+
 
 .no-top-margin-container {
   margin-top: -20px;
@@ -166,6 +177,16 @@ h4 {
 
 input {
   padding-left: 10px;
+  border-radius: 3px;
+}
+
+#iw-date {
+padding-top: 3px;
+padding-bottom: 3px;
+color: #009cbf;
+margin-bottom: 10px;
+margin-left: 5px;
+width: 100%;
 }
 
 .minus-margin-container {
@@ -177,15 +198,6 @@ input {
   padding: 10px;
   margin-bottom: 10px;
   min-width: 170px;
-}
-
-div.gm-style-iw.gm-style-iw-c {
-  background-color: #4cbdc5;
-  border-radius: 6px;
-  font-family: "Rubik", sans-serif;
-  font-weight: 300;
-  font-size: 1rem;
-  min-height: 280px;
 }
 
 /*-----------------------Buttons----------------*/
@@ -240,7 +252,7 @@ table {
   -webkit-box-flex: 1 1 190px;
   -ms-flex: 1 1 190px;
   flex: 1 1 190px;
-  margin: 0 8px;
+  margin-top: 1px;
 }
 
 #controls,
@@ -268,6 +280,10 @@ table {
   border: 1px solid #cccccc;
 }
 
+.iw-rows {
+    margin: auto;
+}
+
 .iw_title {
   font-weight: bold;
   text-align: right;
@@ -290,15 +306,44 @@ img.hotelIcon {
   width: 100%;
 }
 
+.gm-fullscreen-control {
+    display: none;
+}
+
 div.gm-style-iw-d {
-  overflow: auto;
-  min-height: 280px;
+  overflow-y: auto;
   min-width: fit-content;
+  max-height: 390px;
+  min-height: 300px;
+}
+
+div.gm-style-iw.gm-style-iw-c {
+  background-color: #4cbdc5;
+  border-radius: 6px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  overflow-y: auto;
+  max-width: 90%;
+}
+
+.gm-style-iw-c {
+    max-height: 390px;
+    min-height: 300px;
+}
+
+@media screen and (max-width: 767.98px) {
+.gm-style-iw-c {
+    max-height: 390px;
+    min-height: 300px;
+    overflow-y: auto;
+    max-width: 90%;
+}
 }
 
 .iw-hr {
   border-color: #fff;
-  padding: 10px 0px 10px 0px;
+  padding: 0px;
   width: 100%;
 }
 
@@ -309,6 +354,7 @@ div#iw-phone {
   color: #fff;
   padding-left: 10px;
   font-family: "Rubik", sans-serif;
+  font-size: 0.9em;
 }
 
 div#iw-url {
@@ -322,6 +368,7 @@ div#iw-rating {
 
 .white-label {
   color: #fff;
+  font-size: 1.5em;
 }
 
 /*----------------------------------------Results Table*/
@@ -330,6 +377,7 @@ div#iw-rating {
   height: 100%;
   width: 100%;
   margin: 0px 15px 20px 15px;
+  overflow: hidden;
 }
 
 #results {
@@ -358,11 +406,12 @@ div#iw-rating {
 /*-------------------------------------Itinerary*/
 
 #itinerary-block {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 #actualItinerary {
-  height: 280px;
+  height: auto;
+  max-height: 300px;
   min-width: 100%;
   list-style: none;
   overflow-y: auto;
@@ -372,6 +421,12 @@ div#iw-rating {
 
 .zero-margin-row {
  margin-left: 0px;
+}
+
+@media screen and (max-width: 767.98px) {
+.zero-margin-row {
+ margin-right: 15px;
+}
 }
 
 .itinerary-headers {
@@ -415,11 +470,7 @@ div#iw-rating {
   padding-right: 10px;
 }
 
-  #itinerary-block {
-    margin-left: 0px;
-  }
-
-@media screen and (max-width: 767.98px {
+@media screen and (max-width: 767.98px) {
   #actualItinerary {
     height: auto;
   }
